--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+altgraph==0.17.3
+macholib==1.16.2
 numpy==1.24.1
 packaging==23.0
 pdf2image==1.16.2
 Pillow==9.4.0
+pyinstaller==5.7.0
+pyinstaller-hooks-contrib==2022.14
 pytesseract==0.3.10
