--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 flake8==6.0.0
 mccabe==0.7.0
+numpy==1.24.2
+opencv-python==4.7.0.68
+packaging==23.0
+Pillow==9.4.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 PyMuPDF==1.21.1
+pytesseract==0.3.10
